--- a/report.Rmd
+++ b/report.Rmd
@@ -119,17 +119,29 @@ fit <- prcomp(mat)
 idf <- paste(strsplit(params$rp_bridging_str, split = ",")%>%unlist(), collapse = "|")
 idf <- paste0("(", idf, ")")
 
+idf_all <- strsplit(params$rp_bridging_str, split = ",")%>%unlist()
+which_idf <- function(check, idf){
+             idx <- sapply(idf, function(y){
+               grepl(y, ignore.case = T, check)
+             })
+             idf[idx][1]
+           }
+
+
 data.frame(pc_1 = fit$x[ ,1], #fit$layout[ ,1],
            pc_2 = fit$x[ ,2],#fit$layout[ ,2],
            sample_id = params$rp_combined_meta$sample_id,
            type = ifelse(grepl(idf, ignore.case = T, params$rp_combined_meta$sample_id), "Ref", "Study_Sample"),
+           identifier = sapply(params$rp_combined_meta$sample_id, which_idf, idf = idf_all),
            Plate.ID = trim_string_bycommon(params$rp_combined_meta$Plate.ID, split = "_"))%>%
+        mutate(identifier = ifelse(is.na(identifier), "Study_Sample", identifier))%>%
         filter(!grepl("^(NC|IPC|Randox)", ignore.case = T, sample_id))%>%
   ggplot()+
-  geom_point(aes(pc_1, pc_2, color = Plate.ID, shape = type))+
+  geom_point(aes(pc_1, pc_2, shape = Plate.ID, color = identifier))+
   facet_wrap(~type)+
   theme_bw()+
-  theme(legend.position="bottom", legend.box="vertical", legend.margin=margin())
+  theme(legend.position="bottom", legend.box="vertical", legend.margin=margin())+
+  guides(color = guide_legend(ncol=4))
 ```
 
 ### Detailed Reference Trace Plots
