--- a/cor_report.Rmd
+++ b/cor_report.Rmd
@@ -7,6 +7,7 @@ params:
   rp_combined_meta: NA
   rp_choice_b0: NA
   rp_choice_b1: NA
+  rp_batch_plot_cor: NA
 ---
 
 ```{r eval = FALSE, echo = FALSE}
@@ -76,7 +77,13 @@ data_b[is.na(data_b)] = min(data_b, na.rm = T)
 
 rownames(data_a) <- rownames(data_b) <- common_analyte
 
-plot.ls <- lapply(common_analyte, function(x){
+if(is.null(params$rp_batch_plot_cor) | (length(params$rp_batch_plot_cor) == 0)){
+  query <- common_analyte
+}else{
+  query <- params$rp_batch_plot_cor
+}
+
+plot.ls <- lapply(query, function(x){
   df <- data.frame(A = data_a[rownames(data_a) == x, ],
              B = data_b[rownames(data_b) == x, ],
              Sample = common_sample,
