--- a/pca_report.Rmd
+++ b/pca_report.Rmd
@@ -75,7 +75,7 @@ if(length(unique(params$rp_pca_fit$plot_df[[params$rp_choice_c1]])) > 10){
 
 p_dev <- params$rp_combined_meta%>%
       filter(!grepl("(^NC|IPC|Randox)", ignore.case = T, sample_id))%>%
-      ggplot(aes(QC.Deviation.from.median.Inc.Ctrl, QC.Deviation.from.median.Det.Ctrl))+
+      ggplot(aes(QC.Deviation.from.median, QC.Deviation.from.median.1))+
       geom_point(aes(shape = QC.Warning), shape = 21, size = 2)+
       scale_shape_manual(values = c(21, 16))+
       theme_bw(base_size = 8)
@@ -143,8 +143,8 @@ if(nrow(select_observe) == 0){
     dat <- select_observe%>%
        filter(row_number() == i)%>%
        select(sample_id, Plate.ID, QC.Warning, 
-            QC.Deviation.from.median.Inc.Ctrl, 
-            QC.Deviation.from.median.Det.Ctrl,
+            QC.Deviation.from.median, 
+            QC.Deviation.from.median.1,
             pc_1, pc_2)%>%
        DT::datatable(rownames = NULL, options = list(scrollX = TRUE))
     print(
